<resources>
    <string name="app_name">建中公告</string>
    <string name="version">0.151103beta</string>
4d
    <string name="title_section1">首頁</string>
    <string name="title_section2">公告</string>
    <string name="title_section3">登入</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_example">Example action</string>

    <string name="double_click_to_exit">再按一次返回鍵離開</string>

    <string name="author_group">公告群組</string>
    <string name="author_unit">公告單位</string>
    <string name="post_time">發表時間</string>
    <string name="search_hint">關鍵字</string>

    <string name="requestError">網路錯誤\n伺服器繁忙或網路不穩定</string>
    <string name="nothing">---沒有東西惹---</string>
    <string name="downloadStart">開始下載...</string>

    <string name="search">搜尋</string>
    <string name="searchSomething">輸入點東西， 不要搞笑</string>
    <string name="action_openInBrowser">開啟網頁版</string>
    <string name="action_shareAnn">分享公告</string>
    <string name="action_about">關於</string>
    <string name="action_settings">設定</string>
    <string name="title_activity_ann_detail">詳細公告</string>
    <string name="loading">載入中...</string>
    <string name="loadfail">載入失敗</string>
    <string name="loadfail_swipe">載入失敗，下拉重試</string>
    <string name="retry">再試一次...</string>
    <string name="hello_world">Hello world!</string>
    <string name="plzWait">請等待公告載入完成</string>
    <string name="attach_list">▼　附件列表　▼</string>
    <string name="about_app_name">建中公告 (School CMS)</string>
    <string name="whats_new">這次更新了什麼？</string>
    <string name="about_app">公告從「Ann公告系統」讀取後自動同步。
因為該系統沒有排版功能，公告可能會：\n
    1.在奇怪的地方換行。\n
    2.超連結包含奇怪的文字。(請手動去除多餘的字元)\n
    本系統更新頻率為一小時一次，如有需要可以參考「原系統公告連結」。\n</string>
    <string name="update_log">\t1016版\n\t1. 移除最下方小空隙\n
        \t2. 修正由網頁開啟UI的BUG\n
        \t1103版\n
        \t1. 修復有時發生的FOOTER BUG\n
        \t2. 搜尋框全部空白或只填時間時提示現錯誤訊息
    </string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_from_web">ShowFromWeb</string>
    <string name="title_activity_about">關於</string>
</resources>